--- a/html/05-entrada-saida.html
+++ b/html/05-entrada-saida.html
@@ -12555,7 +12555,7 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="repr-e-__-repr-__"><code>repr</code> e <code>__ repr __</code><a class="anchor-link" href="#repr-e-__-repr-__">&#182;</a></h3><p>Uma segunda função, <code>repr</code>, deve converter um determinado objeto em uma representação de string <em>para que essa sequencia de caracteres possa ser usada para recriar o objeto usando a função <code>eval</code></em>. A função <code>repr</code> geralmente fornecerá uma string mais detalhada do que <code>str</code>. A aplicação de <code>repr</code> ao objeto <code>x</code> tentará chamar <code>x.__repr__()</code>.</p>
+<h3 id="repr-e-__repr__"><code>repr</code> e <code>__repr__</code><a class="anchor-link" href="#repr-e-__repr__">&#182;</a></h3><p>Uma segunda função, <code>repr</code>, deve converter um determinado objeto em uma representação de string <em>para que essa sequencia de caracteres possa ser usada para recriar o objeto usando a função <code>eval</code></em>. A função <code>repr</code> geralmente fornecerá uma string mais detalhada do que <code>str</code>. A aplicação de <code>repr</code> ao objeto <code>x</code> tentará chamar <code>x.__repr__()</code>.</p>
 
 </div>
 </div>
