--- a/html/06-fluxo-controle.html
+++ b/html/06-fluxo-controle.html
@@ -12555,7 +12555,7 @@ chamada de "predicado"). Por exemplo:</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="If-then-else-(se...-ent&#227;o...-sen&#227;o...)">If-then-else (se... ent&#227;o... sen&#227;o...)<a class="anchor-link" href="#If-then-else-(se...-ent&#227;o...-sen&#227;o...)">&#182;</a></h2><h5 id="Informa&#231;&#227;o-adicional">Informa&#231;&#227;o adicional<a class="anchor-link" href="#Informa&#231;&#227;o-adicional">&#182;</a></h5><ul>
+<h2 id="Se-ent&#227;o-sen&#227;o">Se-ent&#227;o-sen&#227;o<a class="anchor-link" href="#Se-ent&#227;o-sen&#227;o">&#182;</a></h2><h5 id="Informa&#231;&#227;o-adicional">Informa&#231;&#227;o adicional<a class="anchor-link" href="#Informa&#231;&#227;o-adicional">&#182;</a></h5><ul>
 <li>Introdução à estrutura condicional <code>if-then</code> em <a href="http://docs.python.org/tutorial/controlflow.html#if-statements">Python tutorial, seção 4.1</a></li>
 </ul>
 <p>A declaração <span>`if`</span> permite execução condicional de código. Por exemplo:</p>
@@ -12690,7 +12690,7 @@ chamada de "predicado"). Por exemplo:</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="La&#231;o-for-(for-loop)">La&#231;o <code>for</code> (<code>for</code> loop)<a class="anchor-link" href="#La&#231;o-for-(for-loop)">&#182;</a></h2><h5 id="Informa&#231;&#227;o-adicional">Informa&#231;&#227;o adicional<a class="anchor-link" href="#Informa&#231;&#227;o-adicional">&#182;</a></h5><ul>
+<h2 id="La&#231;o-for">La&#231;o <code>for</code><a class="anchor-link" href="#La&#231;o-for">&#182;</a></h2><h5 id="Informa&#231;&#227;o-adicional">Informa&#231;&#227;o adicional<a class="anchor-link" href="#Informa&#231;&#227;o-adicional">&#182;</a></h5><ul>
 <li>Introdução a laços <code>for</code> <a href="http://docs.python.org/tutorial/controlflow.html#for-statements">Python tutorial, seção 4.2</a></li>
 </ul>
 <p>O laço <span>`for`</span> permite-nos iterar sobre uma sequencia (isto poderia ser uma <em>string</em> ou lista, por exemplo). Aqui está um exemplo:</p>
@@ -12736,7 +12736,7 @@ rato RATO
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Juntamento com o comando <code>range()</code> (No <a href="03-tipos-estruturas-dados.html">Capítulo 3</a>, pode-se iterar sobre inteiros crescentes:</p>
+<p>Juntamente com o comando <code>range()</code>, pode-se iterar sobre inteiros crescentes:</p>
 
 </div>
 </div>
@@ -12781,7 +12781,7 @@ rato RATO
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="La&#231;o-while-(while-loop)">La&#231;o <code>while</code> (<code>while</code> loop)<a class="anchor-link" href="#La&#231;o-while-(while-loop)">&#182;</a></h2><p>A palavra-chave <span>`while`</span> permite-nos repetir uma operação enquanto uma condição é verdadeira. Suponha que quiséssemos saber por quantos anos teremos que guardar 100 reais em uma poupança para alcançar 200 reais simplesmente 
+<h2 id="La&#231;o-while">La&#231;o <code>while</code><a class="anchor-link" href="#La&#231;o-while">&#182;</a></h2><p>A palavra-chave <span>`while`</span> permite-nos repetir uma operação enquanto uma condição é verdadeira. Suponha que quiséssemos saber por quantos anos teremos que guardar 100 reais em uma poupança para alcançar 200 reais simplesmente 
 por uma taxa de juros de 5% ao ano. Aqui está um programa para computar isso:</p>
 
 </div>
