--- a/html/08-ferramentas-funcionais.html
+++ b/html/08-ferramentas-funcionais.html
@@ -13329,7 +13329,7 @@ Done. Final result=15
 <p>As versões que utilizam compreensão de lista e <code>map</code> encaixam-se em uma linha de código, enquanto um laço <code>for</code> precisa de três linhas. Este exemplo mostra que o código funcional resulta em expressões <em>concisas</em>. Normalmente, o número de erros que um programador comete é por linha de código escrita, de modo que quanto menos linhas de código tivermos, menos <em>bugs</em> teremos de encontrar.</p>
 <p>Muitas vezes, os programadores descobrem que, inicialmente, as ferramentas de processamento de lista apresentadas neste capítulo parecem menos intuitivas do que o uso de laços <code>for</code> para processar cada elemento em uma lista individualmente, mas isso - ao longo do tempo - tende a ser valorizado por eles como um estilo de programação mais funcional.</p>
 <h2 id="Rapidez">Rapidez<a class="anchor-link" href="#Rapidez">&#182;</a></h2><p>As ferramentas funcionais descritas neste capítulo também podem ser mais rápidas do que laços explícitos (<code>for</code> ou <code>while</code>) sobre os elementos da lista.</p>
-<p>O programa <code>rapidez_compreensao_lista.py</code> abaixo calcula $ \\sum \_{i=0}^{N-1} i^2 $ para um grande valor de <em>N</em> usando 4 métodos diferentes e registra o tempo de execução:</p>
+<p>O programa <code>rapidez_compreensao_lista.py</code> abaixo calcula $\sum_{i=0}^{N-1} i^2$ para um grande valor de <em>N</em> usando 4 métodos diferentes e registra o tempo de execução:</p>
 <ul>
 <li><p>Método 1: laço <code>for</code> (com lista pré-alocada, armazenamento de <em>i</em><sup>2</sup> na lista, em seguida, usando a função predefinida <code>sum</code>)</p>
 </li>
@@ -13337,7 +13337,7 @@ Done. Final result=15
 </li>
 <li><p>Método 3: usando compreensão de lista</p>
 </li>
-<li><p>Método 4: usando <code>numpy</code>. (<code>numpy</code> é coberto no <a href="14-python-numerico-numpy.html">Capítulo 14</a>)</p>
+<li><p>Método 4: usando <code>numpy</code>.</p>
 </li>
 </ul>
 <p>O programa produz a seguinte saída:</p>
